DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2003-10-28 patrickh Refactored the various I/O interfaces to reduce the number
                    of methods.
                    NEW VERSION: 0.30.0
2003-10-27 allenb   Extended serial port interface.  There is now support
                    for getting/setting various terminal lines.
                    NEW VERSION: 0.29.0
2003-09-23 allenb   Added RWMutexPoix.  This just wraps the standard posix
                    rwmutex methods.
                    NEW VERSION: 0.28.1
2003-09-18 patrickh Refactored vpr::LibraryLoader to use Boost.Function as a
                    callback mechanism for initializing DSOs.
                    Removed vpr::DsoLoader, which has been superceded by
                    vpr::LibraryLoader.
                    NEW VERSION: 0.28.0
2003-09-18 allenb   Changed the std::string constructor in vpr::GUID to be
                    explicit.  This eliminates some autoconversion issues.
2003-09-15 patrickh Dropped support for Draft 4 of the POSIX threads standard.
                    NEW VERSION: 0.27.11
2003-09-10 allenb   Extended object reader interface to support push/pop
                    of current read state.
                    NEW VERSION: 0.27.10
2003-09-02 allenb   Fixed bug in XML Object reader where empty strings
                    could not be read correctly.
2003-09-01 allenb   Added interface to ObjectReader for resetting the reader
                    to the intial read state for another read pass.
                    NEW VERSION: 0.27.8
2003-08-31 allenb   Refactored vprASSERT to print stacktrace.  Refined stack
                    trace output slightly.
                    NEW VERSION: 0.27.8
2003-08-31 allenb   Added vpr::SystemBase::getStackTrace().
                    NEW VERSION: 0.27.7
2003-08-11 patrickh Added vpr::LibraryLoader.
                    NEW VERSION: 0.27.6